[package]
name = "bittles"
version = "0.1.0"
authors = ["Miles Steele <miles@milessteele.com>"]

[dependencies]
bip_bencode = "0.3.0"
byteorder = "1.0.0"
docopt = "0.7.0"
hyper = "0.10.8"
itertools = "0.6.0"
ring = "0.7.5"
rustc-serialize = "0.3"
serde = "0.9.0"
serde_derive = "0.9.0"
serde_cbor = "0.5.2"
url = "1.4.0"
